--- a/index.html
+++ b/index.html
@@ -24,6 +24,37 @@
 
 <h1>📊 Değer Takip Dashboard</h1>
 
+<!-- Özet Dashboard ve Tarih Seçenekleri -->
+<div class="card">
+  <h3>Özet Dashboard</h3>
+  <div class="row">
+    <div class="kpi">
+      <strong>Genel Değer:</strong>
+      <span id="generalValue">-</span>
+    </div>
+    <div class="kpi">
+      <strong>7 Gün Değişim:</strong>
+      <span id="kpi7">-</span>
+    </div>
+    <div class="kpi">
+      <strong>30 Gün Değişim:</strong>
+      <span id="kpi30">-</span>
+    </div>
+    <div class="kpi">
+      <strong>1 Yıl Değişim:</strong>
+      <span id="kpi365">-</span>
+    </div>
+  </div>
+  <div class="row">
+    <select id="presetRange">
+      <option value="7">Son 7 Gün</option>
+      <option value="30">Son 30 Gün</option>
+      <option value="365">Son 1 Yıl</option>
+    </select>
+    <button onclick="calculateTopRange()">Hesapla</button>
+  </div>
+</div>
+
 <!-- Günlük Değer Ekleme -->
 <div class="card">
   <h3>Günlük Değer Ekle</h3>
@@ -198,6 +229,25 @@ function importCash(e){
 }
 
 function fmt(n){ return Number(n).toLocaleString('tr-TR'); }
+
+function calculateTopRange(){
+  let preset = document.getElementById('presetRange').value;
+  let end = new Date();
+  let start;
+  if(preset !== 'custom'){
+    start = new Date();
+    start.setDate(end.getDate()-Number(preset));
+  } else {
+    start = new Date(document.getElementById('topStart').value);
+    end = new Date(document.getElementById('topEnd').value);
+  }
+  let res = rangeCalc(start.toISOString().slice(0,10), end.toISOString().slice(0,10));
+  if(!res) return;
+  document.getElementById('generalValue').innerText = fmt(res.d);
+  document.getElementById('kpi7').innerText = fmt(res.d);
+  document.getElementById('kpi30').innerText = fmt(res.d);
+  document.getElementById('kpi365').innerText = fmt(res.d);
+}
 
 render();
 </script>
